--- a/Eshopping/appsettings.json
+++ b/Eshopping/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "connection": "data source =CHETUIWK82\\SQL2017EXP; initial catalog=Eshopping2; trusted_connection=true;MultipleActiveResultsets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
